# data-encoding

./: .gitignore  .gitlab-ci.yml  .ocamlformat  CHANGES.md  LICENSE  NOTES  README.md  binary-data-encoding.opam  buffy.opam  data-encoding.opam  dune  dune-project  dune-workspace  json-data-encoding.opam  z_before_hmap.json  z_before_hmap.txt
bench/basic/: bench_binary.ml  bench_json.ml  binary_reading.ml  binary_writing.ml  dune  json_writing.ml
bench/basic/benchlib/: benchable.ml  benchlib.ml  dune
bench/basic/helpers/: make_binary_reading_payload.ml
bench/landmarked/: bin_to_read_str_array.ml  binary_reading.ml  binary_writing.ml  dune  json_reading.ml  json_writing.ml  more_detailed_new.ml  more_detailed_old.ml  old_json_reading.ml
bench/lib/: benchable.ml  benchlib.ml  dune
bench/lib/helpers/: dune  make_binary_reading_payload.ml  make_json_reading_payload.ml
bench/micro/: binary_serialisation.ml  dune  encoding_translation.ml
examples/serialise/: dune  serialise.ml
src/binary-data-encoding/: backend.ml  backend.mli  binary_data_encoding.ml  descr.ml  dune  encoding.ml  encoding.mli  encoding_internals.ml  encoding_internals.mli  encoding_public.ml  encoding_public.mli  endian.ml  endian.mli  internals.ml  magic.ml  magic.mli  public.ml  public.mli  query.ml  query.mli  reader.ml  reader.mli  sizability.ml  sizability.mli  size.ml  size.mli  uint_option.ml  uint_option.mli  width.ml  width.mli  writer.ml  writer.mli
src/buffy/: buffy.ml  dst.ml  dst.mli  dune  reading.ml  reading.mli  src.ml  src.mli  writing.ml  writing.mli
src/commons-data-encoding/: boundedCache.ml  boundedCache.mli  commons.ml  dune  eqty.ml  eqty.mli  hlist.ml  hlist.mli  hmap.ml  hmap.mli  sequtils.ml  sizedints.ml  sizedints.mli
src/data-encoding/: data_encoding.ml  dune  encoding.ml  encoding.mli  query.ml  query.mli
src/json-data-encoding/: JQ.ml  JQ.mli  JSON.ml  JSON.mli  PP.ml  PP.mli  backend.ml  backend.mli  construct.ml  construct.mli  destruct.ml  destruct.mli  destruct_incremental.ml  destruct_incremental.mli  dune  encoding.ml  encoding.mli  json_data_encoding.ml
src/suspendable-buffers/: dune  reading.mli  suspendable_buffers.ml  writing.ml  writing.mli
test/binary-data-encoding/expect/: basics.ml  dune  queries.ml  size_limits.ml  stops.ml
test/binary-data-encoding/pbt/: all_simple.ml  dune  pbtlib.ml  regressions.ml  roundtrip.ml  seq_sample.ml  testable.ml  tuple_sample.ml
test/binary-data-encoding/pbt/lib/: dune  pbtlib.ml  testable.ml
test/data-encoding/: dune  pbtlib.ml  roundtrip.ml
test/data-encoding/pbt/: pbtlib.ml  roundtrip.ml
test/json-data-encoding/pbt/: all_simple.ml  all_simple_old.ml  dune  pbtlib.ml  roundtrip.ml  tuple_sample.ml
(+3 files in other folders)
